2005-09-06  Chris Toshok  <toshok@ximian.com>

	* data/browscap.ini: Add the ecmascriptversion/w3cdomversion
	attributes required for ASP.Net client side validation to the
	capabilities for Mozilla 1.[78], IE 5.5 & 6.0, Safari, and Firefox
	0.9 & 1.0 browsers.

2005-08-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add ability to cross-compile from linux to win32.

2005-08-26  Kornél Pál  <kornelpal@hotmail.com>

	* configure.in: Generating Consts.cs from Consts.cs.in instead of MonoVersion.cs.

2005-08-25  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Use CC instead of gcc for __thread tests.

2005-08-25  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Pass --enable-win32-dllmain to libgc configure. Build the runtime as a dll under windows.

2005-08-24  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add -lunwind to ldflags on IA64.

2005-08-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Patch libtool to get rid of 'cyg' prefixes in library names.

2005-08-11  Zoltan Varga  <vargaz@freemail.hu>

	* libmono.vcproj: Fix VC build.

Thu Aug 4 19:55:33 BST 2005 Paolo Molaro <lupus@ximian.com>

	* configure.in: enable the ARM jit port.

2005-08-02  Zoltan Varga  <vargaz@freemail.hu>

	* acconfig.h configure.in: Applied patch from Julien Puydt (julien.puydt@laposte.net). Add check for IPV6_PKTINFO.

2005-07-19  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix definition of LIBC for ia64.

2005-07-12  Daniel Drake  <dsd@gentoo.org>

	* configure.in: Add check for libattr's <attr/attr.h>

2005-07-11  Raja R Harinath  <rharinath@novell.com>

	* scripts/script.in: Add @framework_version@ blank.
	* scripts/script2.in: Remove.
	* scripts/Makefile.am: Update.  Use wsdl.exe for wsdl2 and
	monop.exe for monop2.

2005-07-04  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (EXTRA_DIST): Distribute mono-uninstalled.pc.in.
	(noinst_DATA): Build mono-uninstalled.pc.
	* mono-uninstalled.pc.in (Libs): Avoid ${pc_top_builddir}.