@@ -370,9 +370,7 @@ stat3: mono bench.exe
 docu: mini.sgm
 	docbook2txt mini.sgm
 
-check-local:
-	ok=:; $(MAKE) rcheck || ok=false; \
-	$(top_builddir)/runtime/semdel-wrapper || :; $$ok
+check-local: rcheck
 
 clean-local:
 	rm -f mono a.out gmon.out *.o test.exe
