@@ -1,6 +1,4 @@
-check-local:
-	ok=:; $(MAKE) test || ok=false; \
-	$(top_builddir)/runtime/semdel-wrapper || :; $$ok
+check-local: test
 
 TEST_PROG = ../interpreter/mint
 JITTEST_PROG = ../mini/mono
